wrap fix and media add

--- a/RunBudstyle.css
+++ b/RunBudstyle.css
@@ -7,9 +7,10 @@
 body {
     color: #39a6b2;
     font-family: Arial, Helvetica, sans-serif;
-
-    /*Heder Nav Bar Style */
 }
+
+ /*Heder Nav Bar Style */
+
 header{
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -69,14 +70,18 @@ section {
     }
 
     /*hero*/ 
-.hero{
+
+.hero {
     background-image: url(../Tiny-Tiny/Assets/images/hero-bg.jpg);
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     align-items: flex-start;
-}
-.hero-cta {
+  }
+  
+  .hero-cta {
     width: 35%;
     text-align: right;
     margin: 3.5%;
@@ -84,50 +89,52 @@ section {
     font-size: 18px;
     line-height: 1.2;
   }
+  
   .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
   }
-.hero-form{
+  
+  .hero-form {
+    border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 40%;
     color: #024e76;
-    border-style: solid;
-    border-width: 3px;
-    border-color: #024e76;
-    position: absolute;
-    bottom: 75px;
-    right: 100px;
+    width: 40%;
     margin: 3.5%;
-}
-.hero-form p{
-    margin: 5px  0 15px 0;
-}
-.hero-form h3{
+  }
+  
+  .hero-form h3 {
     font-size: 24px;
     margin: 0;
-}
-.form-input {
+  }
+  .hero-form p {
+    margin: 5px 0 15px 0;
+  }
+  
+  .form-input {
     border: 1px solid #024e76;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
     color: #024e76;
     width: 100%;
-    margin-bottom: 15px;
-}
-.hero-form label{
+    margin-bottom: 15px; 
+  }
+  
+  .hero-form label {
     margin: 0 5px;
-}
-.hero-form button{
-    color:#fce138;
+  }
+  
+  .hero-form button {
+    color: #fce138;
     background-color: #024e76;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
-}
+  } 
+  /* HERO STYLES END */
 
 /*section title */
 
@@ -330,16 +337,107 @@ section {
  
 /*Media Query for smaller desktop screens and smaller*/
 @media screen and (max-width:980px) {
-    
+    header {
+        padding-bottom: 0;
+        justify-content: center;
     }
+
+    header h1{
+        width: 100%;
+        text-align: center;
+    }
+
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 20px;
+    }
+
+    footer h2, footer div {
+        text-align: center;
+        width: 100%;
+    }
+
+    .hero-cta, .hero-form {
+        width: 100%;
+      }
+
+      .hero-cta {
+        text-align: center;
+      }
+
+      .section-title {
+        width: 80%;
+      }
+      
+      .trainer {
+        flex: 0 70%;
+      }
+      
+      .contact-info iframe{
+        flex: 1 100%;
+      }
 }
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
-
+    section {
+        padding: 30px 15px;
+      }
+    
+      .step h3 {
+        flex: 1 100%;
+        text-align: center;
+      }
+    
+      .step-info {
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+      }
+    
+      .step-img {
+        flex: 0 32%;
+        margin-right: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+      }
+    
+      .step-text {
+        flex: 100%;  
+      }
     }
-}
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
-  
-  }
+    hero-form button {
+        width: 100%;
+      }
+    
+      .section-title {
+        width: 95%;
+      }
+    
+      .intro p {
+        width: 100%;
+      }
+    
+      .trainer {
+        flex: 0 100%;
+      }
+    
+      .contact-info {
+        text-align: center;
+      }
+    
+      .contact-info > * {
+        flex: 0 100%;
+      }
+    
+      .contact-form {
+        order: 3;
+      }
+    }
